# VultenRs

./: .gitignore  Cargo.toml  README.md  build.rs  run_tests.sh  test_tf.py
backend/: Cargo.toml
backend/benches/: bench_matmul.rs  bench_va.rs  benches.rs
backend/src/: cmd_buff.rs  compiler.rs  coop_matrix.rs  descriptor.rs  dims.rs  lib.rs  memory.rs  pipeline.rs  prelude.h  queue.rs  test_utills.rs  utills.rs  va.rs
backend/src/kernels/: mod.rs
backend/src/kernels/assign_add_sub_variable/: assign_add_sub.comp  mod.rs
backend/src/kernels/binary/: binary.h  binary_broad.comp  binary_broad.rs  binary_no_board.rs  binary_no_broad.comp  binary_no_broad.rs  binary_simple.comp  binary_simple.rs  mod.rs  shape_helper.rs
backend/src/kernels/conv2d/: backprop_filter.rs  backprop_input.rs  col2im.comp  col2im.rs  conv2d.comp  conv2d.rs  conv2d_gemm.comp  conv2d_gemm.rs  im2col.comp  im2col.rs  mod.rs
backend/src/kernels/matmul/: mat_transpose.comp  mat_transpose.rs  matmul.comp  matmul.rs  matmul_batched.rs  matmul_inline_transpose.rs  matmul_non_inline.rs  matmul_shared.comp  matmul_shared.rs  matmul_test.rs  mod.rs  transpose.comp  transpose.rs
backend/src/kernels/reduce/: mod.rs  reduce.comp  reduce.rs  reduce_leading.comp  reduce_leading.rs  reduce_mixed.comp  reduce_mixed.rs  reduce_slow.rs  reduce_trailing.comp  reduce_trailing.rs
backend/src/kernels/relu/: mod.rs  relu.comp  relu.rs  relu_grad.comp  relu_grad.rs
backend/src/kernels/ssxent/: mod.rs  ssxent.comp
backend/src/kernels/transpose/: mod.rs  transpose.comp
backend/src/kernels/unary/: mod.rs  (+1 more)
(+51 files in other folders)
