[package]
name = "vulten_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow_pluggable_device_sys = {path = "tensorflow_pluggable_device_sys"}
backend = {path = "backend"}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
libc = "0.2.153"
futures = "0.3.30"
async-task = "4.7.0"
flume = "0.11.0"
once_cell = "1.19.0"
protobuf = "3.7.1"

[build-dependencies]
protobuf-codegen = "3.7.1"
